# stack-orchestrator

./: .gitignore  .pre-commit-config.yaml  AI-FRIENDLY-PLAN.md  CLAUDE.md  LICENSE  README.md  STACK-CREATION-GUIDE.md  TODO.md  WORK_IN_PROGRESS.md  ansible.cfg  build-containers.py  build-shiv-package.sh  build.sh  cli.py  cluster-list.txt  container-image-list.txt  deploy-system.py  docker-compose-test.yaml  first_time_setup.sh  force-build.md  infra_pyproject.toml  laconic-network-deployment.md  orchestrator.py  pip-stuff.sh  pod-list.txt  pyproject.toml  pyrightconfig.json  repository-list.txt  requirements.txt  setup-repositories.py  setup.py  snapshot_download.py  testcontainers-compose-test.py  tox.ini
.gitea/: fixturenet-eth-test.yml
.github/: CONTRIBUTING.md
.pebbles/: .gitignore  config.json  events.jsonl  pebbles.db
agave-stack/: README.md
ansible/: biscayne-redeploy.yml
app/: base.py  build-containers.py  build_containers.py  build_npms.py  cli.py  command_types.py  deploy.py  deploy_docker.py  deploy_k8s.py  deploy_system.py  deploy_types.py  deploy_util.py  deployer.py  deployer_factory.py  deployment.py  deployment_create.py  deployments.py  opts.py  setup-repositories.py  setup_repositories.py  spec.py  stack.py  stack_state.py  update.py  util.py  version.py
ashburn-relay-lab/: mia-sw01-startup.cfg  test.sh  topology.yml  was-sw01-startup.cfg
compose/: docker-compose-contract.yml  docker-compose-db-sharding.yml  docker-compose-db.yml  docker-compose-eth-probe.yml  docker-compose-eth-statediff-fill-service.yml  docker-compose-eth_probe.yml  docker-compose-fixturenet-eth.yml  docker-compose-fixturenet-laconicd.yml  docker-compose-go-ethereum-foundry.yml  docker-compose-go-ethereum.yml  docker-compose-ipld-eth-beacon-db.yml  docker-compose-ipld-eth-beacon-indexer.yml  docker-compose-ipld-eth-beacon.yml  docker-compose-ipld-eth-db.yml  docker-compose-ipld-eth-server.yml  docker-compose-keycloak.yml  docker-compose-laconicd.yml  docker-compose-lighthouse.yml  docker-compose-prometheus-grafana.yml  docker-compose-tx-spammer.yml  docker-compose-watcher-erc20.yml  docker-compose-watcher-erc721.yml  docker-compose-watcher-mobymask.yml
docs/: CONTRIBUTING.md  README.md  adding-a-new-stack.md  arista-eos-reference.md  ashburn-relay-checklist.md  ashburn-validator-relay.md  blue-green-upgrades.md  bug-ashburn-tunnel-port-filtering.md  bug-laconic-so-etcd-cleanup.md  bug-laconic-so-ingress-conflict.md  cli.md  deploy-webapps-via-registry.md  deployment_patterns.md  docker-compose-deployment.md  doublezero-agent-managed-config.md  doublezero-multicast-access.md  (+15 more)
(+1357 files in other folders)
